-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.2
-
None
-
Fedora 38 (KDE Plasma)
pipewire 0.3.77
-
-
2ab05abc8 (dev), 6b39152c0 (6.6), dece20f53 (tqtc/lts-6.5), 45e7c8835 (dev), 2dd8e918a (6.6), 81995f51a (tqtc/lts-6.5)
Reproduced with: https://code.qt.io/cgit/qt/qtmultimedia.git/tree/examples/multimedia/player?h=6.5.2
- Load .mp3 file in player
- Press play
- Press pause
- Press play again
Expected result:
- Audio immediately plays/stops with minimal amount of noise
Actual result:
- Audio frequently crackles when pausing
- Audio is silent for 1+ seconds when beginning to play, and crackles/stutters a couple of times before continuing to play normally.
- There is often some additional static noise 3-5 seconds after beginning to play, but only once and after this it plays normally until paused.
This bug is not present in QtMultimedia 5.15 or for example VLC media player. When playing the same mp3 with either of these there is no crackling/stuttering/static and the audio resumes immediately after pause.
QMediaDevices audioOutputs list the following ids (the same 4 devices that show up in VLC)
- alsa_output.usb-Generic_USB_Audio-00.HiFi_hw_Audio_3_sink
- alsa_output.usb-Generic_USB_Audio-00.HiFi_hw_Audio_1_sink
- alsa_output.usb-Generic_USB_Audio-00.HiFi_hw_Audio_sink
- alsa_output.pci-0000_01_00.1.hdmi-stereo