Reduce audio stutterings of audio sink underflow reason

We should rely on AudioSink state change to address buffer underflows.

The patch removes the audio sample compensation as it appears that
the sample compensation doesn't ensure good results on all platforms,
also, it has side effects, e.g. it may increase the audio volume
with white noise sound, even cause some clippings.
The side effects are to be investigated; sample compensation might be
reverted back in the future.

Some details:
- The main reason for the refactoring is the pulse audio sink which
  may consume sound bytes faster than expected in some random moments,
  that makes crackling.
- in theory, it may need more improvements in the future, e.g.
  faster handling of the idle event (a few ms delay may cause a little
  crackling)
- even though the patch removes soft sample compensation,
  the synchronization with video is still soft due to the logic in
  the time controller of the playback engine.
- the implemented algorithm has been tested on macOS, Linux, Windows,
  and the acceptable result has been achieved.

Task-number: QTBUG-116020
Pick-to: 6.6 6.5
Change-Id: I3230be9740542c8548e5e7a5071a55ccb338d5c5
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>