src/plugins/multimedia/ffmpeg/playbackengine/qffmpegaudiorenderer_p.h
@@ -40,9 +40,37 @@ public:
     ~AudioRenderer() override;
 
 protected:
+    using Microseconds = std::chrono::microseconds;
+    struct SynchronizationStamp
+    {
+        QAudio::State audioSinkState = QAudio::IdleState;
+        qsizetype audioSinkBytesFree = 0;
+        qsizetype bufferBytesWritten = 0;
+        TimePoint timePoint = TimePoint::max();
+    };
+
+    struct BufferLoadingInfo
+    {
+        enum Type { Low, Moderate, High };
+        Type type = Moderate;
+        TimePoint timePoint = TimePoint::max();
+        Microseconds delay = Microseconds(0);
+    };
+
+    struct AudioTimings
+    {
+        Microseconds actualBufferDuration = Microseconds(0);
+        Microseconds maxSoundDelay = Microseconds(0);
+        Microseconds minSoundDelay = Microseconds(0);
+    };
+
     RenderingResult renderInternal(Frame frame) override;
 
     void onPlaybackRateChanged() override;
+
+    int timerInterval() const override;
+
+    void onPauseChanged() override;
 
     void freeOutput();
 
@@ -54,22 +82,29 @@ protected:
 
     void updateVolume();
 
-    void updateSynchronization(const Frame &currentFrame);
+    void updateSynchronization(const SynchronizationStamp &stamp, const Frame &frame);
 
-    std::chrono::microseconds currentBufferLoadingTime() const;
+    Microseconds bufferLoadingTime(const SynchronizationStamp &syncStamp) const;
+
+    void onAudioSinkStateChanged(QAudio::State state);
+
+    Microseconds durationForBytes(qsizetype bytes) const;
 
 private:
     QPointer<QAudioOutput> m_output;
     std::unique_ptr<QAudioSink> m_sink;
+    AudioTimings m_timings;
+    BufferLoadingInfo m_bufferLoadingInfo;
     std::unique_ptr<Resampler> m_resampler;
     QAudioFormat m_format;
 
     QAudioBuffer m_bufferedData;
-    qsizetype m_bufferWritten = 0;
+    qsizetype m_bufferBytesWritten = 0;
     QIODevice *m_ioDevice = nullptr;
 
     bool m_deviceChanged = false;
     bool m_drained = false;
+    bool m_firstFrame = true;
 };
 
 } // namespace QFFmpeg
