src/plugins/multimedia/ffmpeg/playbackengine/qffmpegrenderer_p.h
@@ -69,6 +69,8 @@ protected:
 
     bool canDoNextStep() const override;
 
+    int timerInterval() const override;
+
     virtual void onPlaybackRateChanged() { }
 
     struct RenderingResult
@@ -81,7 +83,8 @@ protected:
 
     float playbackRate() const;
 
-    std::chrono::microseconds frameDelay(const Frame &frame) const;
+    std::chrono::microseconds frameDelay(const Frame &frame,
+                                         TimePoint timePoint = Clock::now()) const;
 
     void changeRendererTime(std::chrono::microseconds offset);
 
@@ -101,8 +104,6 @@ protected:
 
 private:
     void doNextStep() override;
-
-    int timerInterval() const override;
 
 private:
     TimeController m_timeController;
